# kube-inspector

./: Cargo.toml  README.md
src/: handlers.rs  k8s_client.rs  main.rs  models.rs
static/: index.html
